@@ -17,7 +17,6 @@
 
 module Main (main, test) where
 
-import qualified Control.Monad.Fail as Fail
 import System.IO (isEOF, hFlush, stdout)
 import Algebra.CommutativeMonoid.Unification
 
@@ -37,12 +36,12 @@ test prob =
             print subst
             putStrLn ""
 
-readM :: (Read a, Fail.MonadFail m) => String -> m a
+readM :: (Read a, MonadFail m) => String -> m a
 readM s =
     case [ x | (x, t) <- reads s, ("", "") <- lex t ] of
       [x] -> return x
-      [] -> Fail.fail "no parse"
-      _ -> Fail.fail "ambiguous parse"
+      [] -> fail "no parse"
+      _ -> fail "ambiguous parse"
 
 -- Like Either String but with fail method defined
 data AnsErr a
@@ -63,7 +62,7 @@ instance Monad AnsErr where
     (Err s) >>= _ = Err s
     return        = Ans
 
-instance Fail.MonadFail AnsErr where
+instance MonadFail AnsErr where
     fail          = Err         -- fail is Err
 
 -- Main loop
