@@ -1,3 +1,10 @@
+2019-10-15  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* cmu.cabal (Version): Released as version 1.12
+
+	* src/Algebra/CommutativeMonoid/Main.hs (AnsErr): Updated code
+	to support the MonadFail proposal as implenented in base-4.13.0.0.
+
 2018-01-06  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* src/Algebra/CommutativeMonad/Main.hs (readM): Adapted the code
